...
    <string name="shell_select_metadata_tracks">Select tracks to edit metadata</string>
    <string name="sleep_timer_title">Sleep Timer</string>
    <string name="sleep_timer_cancel">Cancel Timer</string>
    <string name="sleep_timer_inactive">No sleep timer</string>
    <string name="sleep_timer_minutes_remaining">%1$dm %2$02ds remaining</string>
    <string name="sleep_timer_seconds_remaining">%1$ds remaining</string>
    <string name="common_close">Close</string>
    <string name="theme_color_customize">Customize %1$s</string>
    <string name="theme_color_reset">Reset theme colors</string>
    <string name="theme_color_current">Current %1$s color</string>
    <string name="theme_color_swatch">%1$s: %2$s</string>
    <string name="playlist_create_title">Create Playlist</string>
    <string name="playlist_create_action">Create</string>
...
